# odissei-dataverse-stack

./: .gitignore  .gitmodules  codemeta.json  cvconf.json  dot_env_example  readme.md  setup.sh  start_skosmos.sh  stop_skosmos.sh  teardown_and_cleanup_submodules.sh  upgrading.md
dataverse/: docker-compose.yml
traefik/: docker-compose.yml
utils/: language_setup.sh  start-odissei.sh  start-proxy.sh
utils/dataverse/: configure_web_analytics.sh  create_dataverses.py  docker-compose.yml  dot_env  fix_robots_txt.sh  import-licenses.py  install_exporters.sh  pyproject.toml  run_py_scripts.sh
utils/dataverse/dataverses/: cbs.json  dans.json  dataversenl.json  hsn.json  liss.json  odissei-portal.json
utils/dataverse/dataverses/root/: facets.json  metadatablocks.json
utils/dataverse/exporters/: README.md
utils/dataverse/mounts/: bundle.Properties  dataset.xhtml  search-include-fragment.xhtml  update.sh
utils/dataverse/robots-txt/: dev.robots.txt  prod.robots.txt
utils/external_vocabularies/: cvocconf.json
utils/metadata/: upload-blocks.sh  upload.sh
utils/skosmos/: copy_config.sh  docker-compose-skosmos.ttl  docker-compose.yml  download_vocabs.sh  odissei-init.sh
utils/solr/: copy_solr.sh  schema.xml  solrconfig.xml
utils/solr/schema/: update.sh
utils/solr/schema-update/: update.sh
utils/traefik/: .env  docker-compose.yml  rules-infra.toml
utils/traefik/letsencrypt/: acme.json
utils/upgrades/6.4to6.5/: README.md  dot_env_6.5  upgrade-from6.4-dump.sql  upgrade.sh
utils/upgrades/6.4to6.6/: README.md  dot_env_6.6  upgrade.sh
(+1 files in other folders)
