[tool.poetry]
name = "scripts for devstack"
version = "0.1.0"
description = "Utils for ODISSEI."
authors = ["Fjodor van Rijsselberg"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
